1999-03-12  James Henstridge  <james@daa.com.au>

	* configure.in, pygtk.spec: increased version number to 0.5.12.
	
	* gtkmodule.c: added optional support for not catching exceptions in
	callbacks.  This way it should be a lot easier to debug a pygtk
	program with pdb.
	
	* gtkmodule.c, gtk.py: a few fixes for problems sent in by
	Chi-Deok Hwang.  This includes a fix to GtkWidget.event(),
	assignments to GtkStyle attributes throwing exceptions,
	font loading getting reference counting correct and throwing
	exceptions for bad font names and allowing None to be passed
	as a colour to GnomeCanvasItem.set() (the fix is in pygtk).

	* generate/gtklists.defs (gtk_ctree_new): I had missed this
	function in previous releases.

1999-02-24  James Henstridge  <james@daa.com.au>

	* gtk.py: made changes to match those in the defs files and _gtk.

	* description.py (GdkGC.set_dashes): describe new GdkGC method.

	* generate/gtkcontainers.defs: removed gtk_window_set{focus,default},
	since these are internal to GtkWindow.  Also added
	gtk_handle_box_set_handle_position and gtk_handle_box_set_snap_edge.

	* gtkmodule.c: added gtk_widget_get_child_requisition.
	(PyGdkGC_GetAttr): added method GdkGC.set_dashes to set the dash
	pattern for this GC.

1999-02-23  James Henstridge  <james@daa.com.au>

	* pyglade/build.py: added some code to get the option menu creation
	code working.

	* pyglade/xmlparse.py: check if xmllib is included in the standard
	python library, use it for the XML parser -- it is much more complete,
	and doesn't barf on some valid XML files like the old one does.  If
	xmllib is not found, the old parser is used.

	* README, Makefile.am, pygtk.spec: added references to the MAPPING
	file.

	* MAPPING: new file describing the mapping of GTK+ onto python as
	pygtk does it.

1999-02-22  James Henstridge  <james@daa.com.au>

	* description.py (GdkCursor): added information about this type.

	* gtk.py: commented out the __getattr__, __setattr__ and __delattr__