@@ -1,3 +1,9 @@
+1999-03-13  James Henstridge  <james@daa.com.au>
+
+	* examples/testgtk/testgtk.py: Applied some fixes from Chi-Deok Hwang
+	to this example.  Mainly clean ups needed because of me not changing
+	testgtk with the rest of pygtk.
+
 1999-03-12  James Henstridge  <james@daa.com.au>
 
 	* configure.in, pygtk.spec: increased version number to 0.5.12.
